--- a/my_scripts/sensor_fusion/parameter/data visiualisation.ipynb
+++ b/my_scripts/sensor_fusion/parameter/data visiualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "bag = rosbag.Bag ('/home/rosmatch/catkin_ws_yassin/src/match/my_scripts/aufnahmen/aufnahmen_test_marvelmind/stationary_state/aufnahme_stationary_los/2022-11-07-14-07-53.bag')\n",
+    "bag = rosbag.Bag ('/home/rosmatch/catkin_ws_yassin/src/match/my_scripts/aufnahmen/aufnahmen_test_marvelmind/stationary_state/aufnahme_stationary_nlos/2022-11-07-15-27-23.bag')\n",
     "for topic, msg, t in bag.read_messages(topics=['/odom']):\n",
     "    x_odom.append(msg.pose.pose.position.x)\n",
     "    y_odom.append(msg.pose.pose.position.y)\n",
@@ -126,7 +126,7 @@
     "    z_mean.append(msg.pose.pose.position.z) \n",
     "bag.close() \n",
     "\n",
-    "#%matplotlib\n"
+    "%matplotlib\n"
    ]
   },
   {
@@ -189,7 +189,7 @@
     "    tt_marv=str((timestamps_marv[i]-timestamps_marv[0])/10000)\n",
     "    timestamp_marv.append(tt_marv)\n",
     "    result_2 = [int(item) for item in timestamp_marv] \n",
-    "\n",
+    "ff\n",
     "\n",
     "plt.plot(result_2,degz_marv_unwraped)\n",
     "\n"
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
     "plot5=plt.plot(x_mean,y_mean,'go',alpha=0.2,label='Beacon paired Position ')\n",
     "plt.legend(loc=\"upper right\")\n",
     "plt.title(\"Beacons Position\")\n",
-    "plt.xlim([0.7, 0.84])\n",
+    "#plt.xlim([0.7, 0.84])\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
