--- a/my_scripts/sensor_fusion/data visiualisation.ipynb
+++ b/my_scripts/sensor_fusion/data visiualisation.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 59,
-=======
-   "execution_count": 13,
->>>>>>> da313194491209d5fe8da543ddf328b1d825b083
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +18,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 64,
-=======
-   "execution_count": 14,
->>>>>>> da313194491209d5fe8da543ddf328b1d825b083
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,19 +72,19 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 65,
-=======
-   "execution_count": 15,
->>>>>>> da313194491209d5fe8da543ddf328b1d825b083
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: TkAgg\n"
+     ]
+    }
+   ],
    "source": [
-<<<<<<< HEAD
-    "bag = rosbag.Bag ('/home/rosmatch/catkin_ws_yassin/src/match/my_scripts/aufnahmen/aufnahmen_test_marvelmind/stationary_state/aufnahme_stationary_nlos/2022-11-07-15-27-23.bag')\n",
-=======
-    "bag = rosbag.Bag ('/home/ros/catkin_ws_yassin/src/match/my_scripts/aufnahmen/aufnahmen_test_marvelmind/stationary_state/aufnahme_stationary_los/2022-11-07-14-07-53.bag')\n",
->>>>>>> da313194491209d5fe8da543ddf328b1d825b083
+    "bag = rosbag.Bag ('/home/ros/catkin_ws_yassin/src/match/my_scripts/aufnahmen/aufnahmen_test_marvelmind/stationary_state/aufnahme_stationary_los/2022-11-09-09-51-50.bag')\n",
     "for topic, msg, t in bag.read_messages(topics=['/odom']):\n",
     "    x_odom.append(msg.pose.pose.position.x)\n",
     "    y_odom.append(msg.pose.pose.position.y)\n",
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +150,7 @@
     "    result_1 = [int(item) for item in timestamp]\n",
     "    \n",
     "#plt.plot(euler_2)\n",
-    "plt.plot(result_1, deg_fil_unwraped)\n",
+    "#plt.plot(result_1, deg_fil_unwraped)\n",
     "\n",
     "\n",
     "f = len(x_odom_q)\n",
@@ -172,48 +164,52 @@
     "    timestamp_odom.append(tt_odom)\n",
     "    result = [int(item) for item in timestamp_odom]\n",
     "\n",
-    "plt.plot(result,deg_odom_unwraped)\n",
+    "#plt.plot(result,deg_odom_unwraped)\n",
     "#print (yaw_odom)\n",
     "\n",
     "f = len(x_marv_q)\n",
-    "for i in range (f):\n",
+    "for i in range (1,f):\n",
     "    quat_marv=[x_marv_q[i],y_marv_q[i],z_marv_q[i],w_marv_q[i]]\n",
     "    euler_marv = transformations.euler_from_quaternion (quat_marv)\n",
     "    yaw_marv.append(euler_marv[2])\n",
     "    yaw_marv_unwraped=np.unwrap(yaw_marv)\n",
     "    degz_marv_unwraped=((yaw_marv_unwraped/(math.pi))*180)\n",
-    "    tt_marv=str((timestamps_marv[i]-timestamps_marv[0])/10000)\n",
+    "    tt_marv=str((timestamps_marv[i]-timestamps_marv[1]))\n",
     "    timestamp_marv.append(tt_marv)\n",
     "    result_2 = [int(item) for item in timestamp_marv] \n",
-    "ff\n",
     "\n",
-    "plt.plot(result_2,degz_marv_unwraped)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "plot5=plt.plot(x_1,y_1,'bo',alpha=0.2,label='Beacon Position 1')\n",
-    "plot6=plt.plot(x_2,y_2,'ro',alpha=0.2,label='Beacon Position 2')\n",
-    "plot5=plt.plot(x_mean,y_mean,'go',alpha=0.2,label='Beacon paired Position ')\n",
-    "plt.legend(loc=\"upper right\")\n",
-    "plt.title(\"Beacons Position\")\n",
-    "#plt.xlim([0.7, 0.84])\n",
-    "plt.grid(True)\n",
-    "plt.show()"
+    "plt.plot(result_2,degz_marv_unwraped, 'b')\n",
+    "plt.title(\"Orientation Based on Paired Beacons\")\n",
+    "plt.xlabel(\"Time [s]\")\n",
+    "plt.ylabel(\"Angle [degrees]\")\n",
+    "plt.xlim([0,6*1e10])\n",
+    "plt.ylim([-7.5, 7.5])\n",
+    "plt.grid(True) \n",
+    "plt.show()\n",
+    "print ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-=======
    "execution_count": 72,
->>>>>>> da313194491209d5fe8da543ddf328b1d825b083
    "metadata": {},
    "outputs": [
     {
